--- a/templates/vhost.conf.j2
+++ b/templates/vhost.conf.j2
@@ -1,7 +1,7 @@
 $SERVER["socket"] == ":80" {
     $HTTP["host"] =~ "{{ _vhost.name }}" {
         server.name = "{{ _vhost.name }}" 
-        errorlog.filename = "{{ lighttpd['vhosts_dir'] }}/{{ _vhost.name }}/logs/error.log"
+        server.errorlog = "{{ lighttpd['vhosts_dir'] }}/{{ _vhost.name }}/logs/error.log"
         accesslog.filename = "{{ lighttpd['vhosts_dir'] }}/{{ _vhost.name }}/logs/access.log"
         
         alias.url += ("/.well-known/" => "/var/www/lighttpd/.well-known/")
@@ -39,7 +39,7 @@ $SERVER["socket"] == ":443" {
         ssl.pemfile = "/etc/letsencrypt/live/{{ _vhost.name }}/bundle.pem" # Combined Certificate
         ssl.ca-file = "/etc/letsencrypt/live/{{ _vhost.name }}/chain.pem" # Root CA
         server.name = "{{ _vhost.name }}" 
-        errorlog.filename = "{{ lighttpd['vhosts_dir'] }}/{{ _vhost.name }}/logs/error_ssl.log"
+        server.errorlog = "{{ lighttpd['vhosts_dir'] }}/{{ _vhost.name }}/logs/error_ssl.log"
         accesslog.filename = "{{ lighttpd['vhosts_dir'] }}/{{ _vhost.name }}/logs/access_ssl.log"
         
         alias.url += ("/.well-known/" => "/var/www/lighttpd/.well-known/")
